k8s/database.yml
# Description: This file contains the deployment and service configuration for the postgres database.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
  namespace: medscanner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - name: database
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-storage
              subPath: data
      imagePullSecrets:
        - name: acr-auth
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: medscanner
  labels:
    app: database
spec:
  type: LoadBalancer
  ports:
    - port: 5432
  selector:
    app: database
